added location data with lat and long coordinates

--- a/data/managedata.ipynb
+++ b/data/managedata.ipynb
@@ -2040,6 +2040,10 @@
     "import plotly.plotly as py\n",
     "import plotly.tools as tls\n",
     "import plotly.graph_objs as go\n",
+    "import gmaps \n",
+    "import gmaps.datasets\n",
+    "\n",
+    "gmaps.configure(api_key=\"AIzaSyCq4L7UwDx8npjQlJIOZW912OytCvhvFhU\")\n",
     "\n",
     "tls.set_credentials_file(username='kartiktennis', api_key='kmUfak4H62LCSXhmQgdh') #allows plotly integration\n",
     "\n",
@@ -2282,6 +2286,91 @@
     ")\n",
     "fig = go.Figure(data=data, layout=layout)#creates figure object\n",
     "py.iplot(fig, filename=\"Number of Occurences vs Call Type\")#generates graph "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       37.77444199 -122.5046792\n",
+       "1       37.77409486 -122.4200014\n",
+       "2       37.75521795 -122.4755404\n",
+       "3        37.7903193 -122.4231629\n",
+       "4       37.77732776 -122.3930886\n",
+       "5       37.75689017 -122.4222293\n",
+       "6         37.783359 -122.4166949\n",
+       "7       37.76924401 -122.4080072\n",
+       "8       37.80711992 -122.4164279\n",
+       "9       37.71214951 -122.4171412\n",
+       "10      37.77883232 -122.4156425\n",
+       "11      37.79709205 -122.3983331\n",
+       "12       37.7560964 -122.4277834\n",
+       "13      37.78079208 -122.4083857\n",
+       "14      37.75223946 -122.4184453\n",
+       "15      37.78521736 -122.4170696\n",
+       "16      37.77952317 -122.4126393\n",
+       "17       37.74817255 -122.458695\n",
+       "18      37.77005466 -122.4461284\n",
+       "19        37.783359 -122.4166949\n",
+       "20      37.77779031 -122.4128343\n",
+       "21       37.78066916 -122.401678\n",
+       "22      37.77409268 -122.4410844\n",
+       "23       37.8028277 -122.4130343\n",
+       "24      37.78626844 -122.4129972\n",
+       "25       37.77027309 -122.448605\n",
+       "26      37.78191397 -122.4130322\n",
+       "27      37.72229807 -122.4113031\n",
+       "28       37.75962769 -122.415923\n",
+       "29      37.78186545 -122.4142853\n",
+       "                  ...           \n",
+       "9970    37.76177683 -122.4351517\n",
+       "9971    37.74201996 -122.4778388\n",
+       "9972    37.73181989 -122.4054121\n",
+       "9973    37.78244404 -122.4205745\n",
+       "9974     37.72045775 -122.437031\n",
+       "9975    37.78331041 -122.3883799\n",
+       "9976    37.77487017 -122.3944171\n",
+       "9977    37.80480917 -122.4067955\n",
+       "9978    37.71986848 -122.3909048\n",
+       "9979    37.78116831 -122.4348057\n",
+       "9980    37.76613439 -122.4219351\n",
+       "9981    37.78244404 -122.4205745\n",
+       "9982    37.81052072 -122.3651383\n",
+       "9983    37.79729803 -122.4338467\n",
+       "9984    37.77609673 -122.4085643\n",
+       "9985     37.75011834 -122.390433\n",
+       "9986    37.76063768 -122.4258437\n",
+       "9987    37.77995613 -122.4664266\n",
+       "9988    37.76815416 -122.4543116\n",
+       "9989    37.79183463 -122.4108175\n",
+       "9990    37.76719155 -122.4312218\n",
+       "9991    37.77588509 -122.4303653\n",
+       "9992    37.77128553 -122.4132043\n",
+       "9993     37.76151391 -122.425556\n",
+       "9994    37.74910206 -122.4869272\n",
+       "9995     37.7579696 -122.4167271\n",
+       "9996    37.78708179 -122.4258678\n",
+       "9997    37.78420567 -122.4076127\n",
+       "9998    37.80516257 -122.4329574\n",
+       "9999    37.78558247 -122.4146172\n",
+       "Name: coordinates, Length: 10000, dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "incident_coordinates_with_type = pd.read_csv('location_coordinates.csv') #store coordinate data\n",
+    "\n",
+    "coordinates_only = incident_coordinates_with_type['coordinates'] #gets data set of coordinates only\n",
+    "\n",
+    "\n"
    ]
   },
   {
