parsed for most common zipcode for top three incidents with longest response time

--- a/data/additionaldata.ipynb
+++ b/data/additionaldata.ipynb
@@ -531,24 +531,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "zipcodes = pd.read_csv(\"zipcodes_csv.csv\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([94121, 94103, 94122, 94109, 94107, 94110, 94102, 94133, 94134,\n",
+       "       94111, 94114, 94131, 94117, 94112, 94118, 94158, 94105, 94115,\n",
+       "       94108, 94124, 94104, 94116, 94123, 94127, 94132, 94130, 94129],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime,timedelta\n",
+    "\n",
+    "dispatch_times = pd.read_csv('dispatch_times_cleansed.csv')\n",
+    "\n",
+    "def createTimeDelta(x):\n",
+    "    time = datetime.strptime(x,'%D days %H:%M:%S')\n",
+    "    return timedelta(hours=time.hour,minutes=time.minute,seconds=time.second);\n",
+    "\n",
+    "#zipcodes['dispatch_time'] = dispatch_times['dispatch_time']\n",
+    "zipcodes.zipcode_of_incident.unique()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most common Structure Fire Area: 0    94102\n",
+      "dtype: int64\n",
+      "Most common Train / Rail Incident Area: 0    94105\n",
+      "dtype: int64\n",
+      "Most common Water Rescue Area: 0    94129\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#structure fires, trains, water rescues take longest times for dispatch - get corresponding zipcodes\n",
+    "Structure_Fire_code = pd.DataFrame(columns=['call_type', 'zipcode_of_incident'])\n",
+    "Water_Rescue_code = pd.DataFrame(columns=['call_type', 'zipcode_of_incident'])\n",
+    "TrainRail_code = pd.DataFrame(columns=['call_type', 'zipcode_of_incident'])\n",
+    "\n",
+    "for index,row in zipcodes.iterrows(): \n",
+    "    if row['call_type'] == 'Structure Fire':\n",
+    "        Structure_Fire_code = zipcodes.loc[zipcodes['call_type'] == 'Structure Fire']\n",
+    "    if row['call_type'] == 'Water Rescue':\n",
+    "        Water_Rescue_code = zipcodes.loc[zipcodes['call_type'] == 'Water Rescue']\n",
+    "    if row['call_type'] == 'Train / Rail Incident':\n",
+    "        TrainRail_code = zipcodes.loc[zipcodes['call_type'] == 'Train / Rail Incident']\n",
+    "\n",
+    "# Structure_Fire_code #SF(longest dispatch type) with zipcode areas\n",
+    "# Water_Rescue_code #WR(longest dispatch type) with zipcode areas\n",
+    "# TrainRail_code #TR(longest dispatch type) with zipcode areas\n",
+    "\n",
+    "#get most common zipcode in each of three files - corresponds to the longest dispatch areas\n",
+    "\n",
+    "zipcode_Structure_Fire = Structure_Fire_code['zipcode_of_incident'].mode()\n",
+    "\n",
+    "zipcode_TrainRail = TrainRail_code['zipcode_of_incident'].mode()\n",
+    "\n",
+    "zipcode_Water_Rescue = Water_Rescue_code['zipcode_of_incident'].mode()\n",
+    "\n",
+    "print(\"Most common Structure Fire Area: \" + str(zipcode_Structure_Fire))\n",
+    "print(\"Most common Train / Rail Incident Area: \" + str(zipcode_TrainRail))\n",
+    "print(\"Most common Water Rescue Area: \" + str(zipcode_Water_Rescue))"
+   ]
   },
   {
    "cell_type": "code",
